--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "files": [
     "dst"
   ],
-  "main": "dst/bundle.min.js",
+  "main": "dst/bundle.js",
   "scripts": {
     "server": "NODE_ENV=development webpack-dev-server",
     "build": "NODE_ENV=production webpack",
