--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "Nikolai Kuznetcov",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "1.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
@@ -45,6 +44,7 @@
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
-    "webpack-dev-server": "3.1.14"
+    "webpack-dev-server": "3.1.14",
+    "puppeteer": "1.11.0"
   }
 }
