--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nikuz/images-core",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "files": [
     "dst"
@@ -10,11 +10,7 @@
     "start": "NODE_ENV=development webpack-dev-server",
     "prebuild": "npm run eslint",
     "build": "NODE_ENV=production webpack",
-    "eslint": "eslint ./webpack.config.js ./src ./test -f table",
-    "resize": "convert ./src/public/graphics/002.jpg -resize 1080x1080^ -gravity center -crop 1080x1080+0+0 -blur 0x8 ./src/public/graphics/output.jpg",
-    "puppeteer": "node runner.js",
-    "create-video": "ffmpeg -i %03d.jpeg -final_delay 500 out.gif",
-    "create-gif": "rm -rf ./dst/out && mkdir ./dst/out && npm run puppeteer && ffmpeg -framerate 40 -i ./dst/out/%03d.jpeg -final_delay 500 ./dst/out/out.gif"
+    "eslint": "eslint ./webpack.config.js ./src ./test -f table"
   },
   "author": "Nikolai Kuznetcov",
   "license": "ISC",
@@ -44,7 +40,6 @@
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
-    "webpack-dev-server": "3.1.14",
-    "puppeteer": "1.11.0"
+    "webpack-dev-server": "3.1.14"
   }
 }
